# dmipy

./: .gitignore  AUDIT_REPORT.md  Dockerfile  EXAMPLES.md  LICENSE  README.md  ROADMAP.md  Singularity  agents.md  app.json  benchmark_error.txt  benchmark_final_results.txt  benchmark_output.txt  benchmark_output_2.txt  benchmark_output_3.txt  benchmark_output_4.txt  benchmark_output_5.txt  benchmark_results.txt  benchmark_results_2.txt  benchmark_results_3.txt  benchmark_results_4.txt  benchmark_results_5.txt  build_and_run.sh  build_log.txt  build_log_final.txt  build_log_phase2.txt  build_log_retry.txt  build_log_sim.txt  check_data.py  check_dipy_ixi.py  check_env.py  check_imports.py  config.json  contribution_guidelines.rst  debug_bessel.py  debug_cylinder.py  debug_cylinder_v2.py  debug_err.txt  debug_hbn.py  debug_log.txt  (+121 more)
benchmarks/: aapm_challenge_benchmark.py  agent1_crossing_fibers.py  agent4_qiba_bias.py  benchmark_amico_cvxpy_vs_scico_jax.py  benchmark_amico_memory.py  benchmark_amortized_oracle.py  benchmark_comparison.py  benchmark_complex_models.py  benchmark_connectome.py  benchmark_lowfield_denoising.py  benchmark_mcmc.py  benchmark_noddi_fit.py  benchmark_oracle_comparison.py  benchmark_pygpc_script.py  benchmark_real_data.py  benchmark_scalability.py  benchmark_scaling_1M_voxels.py  benchmark_stick_performance.py  canonical_sims.py  check_gpu.py  compare_connectome_results.py  compare_mdt_models.py  compare_oracle_results.py  compare_surrogates.py  composition_test.py  cylinder_test.py  explore_optimistix_stats.py  fitting_test.py  generate_delta_phantom.py  generate_emulator_data.py  generate_synthetic_hcp.py  hbn_throughput.py  inverse_solver_contest.py  mudi_benchmark.py  noddi_mcmc_benchmark.py  optimistix_test.py  optimize_solver.py  particle_engine_benchmark.py  profile_fitting.py  prostatex_benchmark.py  (+16 more)
dmipy_jax/: __init__.py  acquisition.py  composer.py  constants.py  cylinder.py  gaussian.py  invariants.py  rank_detection.py  sphere.py  tensor_train.py
docker/: Dockerfile.mdt  Dockerfile.sbi_dmri  README.md  build_and_run.sh  generate_benchmarks.py  generate_data.py  list_mdt_models.py  mdt_adapter.py  mdt_benchmarks.json  run_mdt_simulation.py  verify_oracle.py
docs/: conf.py  index.md  index.rst  references.bib  requirements.txt  theory.rst
examples/: app_oed.py  debug_restricted_cylinder.py  demo_algebraic_fitting.py  demo_ball_and_stick_jax.py  demo_bigmac_fury.py  demo_chap_real_data.py  demo_connectome2_grad_dev.py  demo_connectome_sde_simulation.py  demo_diff_t2.py  demo_dmipy_jax.py  demo_ivim_stages.py  demo_ixi.py  demo_multi_te_load.py  demo_pypulseq_bigmac.py  demo_real_bigmac_analysis.py  demo_sgm_manifold.py  download_data.sh  download_hbn_aws.py  download_prostatex.py  example_axcaliber.ipynb  example_axcaliber_synthetic.py  example_global_tv_amico.ipynb  generate_synthetic_fwe_data.py  generate_synthetic_oracle.py  generate_synthetic_oracle_jax.py  generate_synthetic_training_data.py  generate_web_report.py  iqt_replication.py  prepare_hbn_pilot.py  prepare_proxy_pilot.py  process_connectome2.py  process_connectome2_axcaliber.py  program_7T_interaction.py  program_global_recon.py  program_real_world_denoising.py  program_real_world_validation.py  program_simulation.py  program_voxel_fitting.py  real_world_validation.py  reg_om1.sh  (+20 more)
experiments/: analyze_biexp_algebra.py  calibrate_tv.py  debug_sphere_gpd.py  demo_degeneracy.py  test_algebraic_init.py  test_flow_degeneracy.py  test_sgm_phantoms.py  test_ssft.py  train_emulator.py  verify_algebraic_design.py  verify_guidance.py
models/: fwe_oracle.eqx
packaging/: python-dmipy-jax.spec
prompts/: approach_1_jtv.md  approach_2_inr.md  approach_3_mmorf.md  fix_jtv_scico.md  prompt_algebraic_initializers.md  sbi_implementation_tasks.md
scripts/: batch_inversesr.py  benchmark_sbi_dmri.sh  check_imports.py  debug_docker_env.py  generate_latent_stats.py  inspect_data.py  reproduce_c2_bug.py  run_inversesr_batch.sh  run_inversesr_docker.sh  test_bessel_limits.py  test_import.py
tests/: benchmark_scanner_gpu.py  check_scico_vmap.py  debug_gradients.py  hello.py  manual_test_fw_dti.py  test_amortized_inference.py  test_bingham_model.py  test_curved_sde.py  test_jax_equivalence.py  test_jax_full_workflow.py  (+20 more)
(+418 files in other folders)
