[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmipy-jax"
version = "0.1.0"
description = "JAX-accelerated Microstructure Imaging (Drop-in replacement for dmipy)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Rutger Fick", email = "fick.rutger@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "jax",
  "dmipy",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/AthenaEPI/dmipy"

[tool.hatch.build.targets.wheel]
packages = ["dmipy_jax"]
