[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmipy-jax"
version = "0.1.0"
description = "JAX-accelerated Microstructure Imaging (Drop-in replacement for dmipy)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Rutger Fick", email = "fick.rutger@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "jax[cuda12]",
  "dmipy",
  "numpy",
  "jaxlib",
  "jaxopt",
  "blackjax",
  "furo",
  "equinox",
  "optimistix",
  "lineax",
  "diffrax",
  "jaxtyping",
  "jax-md",
  "ipython",
  "pypulseq",
  "scico",
  "datalad",
  "nibabel",
  "h5py",
  "dipy>=1.11.0",
  "boto3>=1.42.30",
  "optax>=0.2.6",
  "scikit-image>=0.26.0",
  "matplotlib>=3.10.8",
  "cvxpy>=1.7.5",
]

[project.urls]
Homepage = "https://github.com/AthenaEPI/dmipy"

[tool.hatch.build.targets.wheel]
packages = ["dmipy_jax"]

[project.scripts]
dmipy-report = "dmipy_jax.cli.bids_report:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pyjulia",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
]
