[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmipy-jax"
version = "0.1.0"
description = "JAX-accelerated Microstructure Imaging (Drop-in replacement for dmipy)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Rutger Fick", email = "fick.rutger@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "jax[cuda12]",
  "dmipy",
  "numpy",
  "jaxlib",
  "jaxopt",
  "blackjax",
  "furo",
  "equinox",
  "optimistix",
  "lineax",
  "diffrax",
  "jaxtyping",
  "jax-md",
  "ipython",
  "pypulseq",
  "scico>=0.0.6",
  "datalad",
  "nibabel",
  "h5py",
  "dipy>=1.11.0",
  "boto3>=1.42.30",
  "optax>=0.2.6",
  "scikit-image>=0.26.0",
  "matplotlib>=3.10.8",
  "cvxpy>=1.7.5",
  "tqdm>=4.67.1",
  "corner>=2.2.3",
  "flowjax>=17.2.1",
  "healpy>=1.19.0",
  "scikit-learn>=1.8.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "timm>=1.0.24",
  "opencv-python>=4.13.0.90",
  "uguide",
  "e3nn-jax>=0.20.8",
  "numpyro>=0.19.0",
  "vbjax>=0.0.18",
  "ttax",
  "sympy>=1.14.0",
  "pandas>=3.0.0",
  "tabulate>=0.9.0",
  "annotated-types>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/AthenaEPI/dmipy"

[tool.hatch.build.targets.wheel]
packages = ["dmipy_jax"]

[project.scripts]
dmipy-report = "dmipy_jax.cli.bids_report:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pyjulia",
    "sybil",
    "pytest-cov",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
]

[tool.pytest.ini_options]
addopts = "--cov=dmipy_jax --cov-report=term-missing"
testpaths = [
    "dmipy_jax/tests",
    "docs/tutorials",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv.sources]
uguide = { git = "https://github.com/mjallais/uGUIDE" }

[dependency-groups]
dev = [
    "mdt>=1.2.7",
    "pytest>=9.0.2",
]
